python/src/rabbit/manifest/statefullset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
spec:
  selector:
    matchLabels:
      app: rabbitmq
  serviceName: not-applicable
  replicas: 1
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          ports:
            - containerPort: 15672
              protocol: TCP
              name: http
            - containerPort: 5672
              name: amqp
              protocol: TCP
          volumeMounts:
            - name: rabbitmq-volume
              mountPath: /var/lib/rabbitmq
      volumes:
        - name: rabbitmq-volume
          persistentVolumeClaim:
            claimName: rabbitmq-pvc
